# argentum

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pyproject.toml
app/: main.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial_migration.py  95584c0e0794_change_timestamps_to_timezone_aware.py  ca722952e486_add_index_on_username_field.py  f0886c6a3ba1_create_users_table.py
backend/application/: __init__.py
backend/application/dtos/: __init__.py  auth_dtos.py
backend/application/interfaces/: __init__.py  hash_service.py  token_service.py
backend/application/use_cases/: __init__.py  login_user.py  register_user.py
backend/domain/: __init__.py
backend/domain/entities/: __init__.py  base.py  user.py
backend/domain/exceptions/: __init__.py  token_exceptions.py  user_exceptions.py
backend/domain/repositories/: __init__.py  user_repository.py
backend/domain/value_objects/: __init__.py  email.py  password.py
backend/infrastructure/: __init__.py
backend/infrastructure/database/: __init__.py  connection.py  models.py
backend/infrastructure/logging/: __init__.py  setup.py
backend/infrastructure/repositories/: __init__.py  postgres_user_repository.py
backend/infrastructure/services/: __init__.py  hash_service.py  jwt_token_service.py
backend/presentation/: __init__.py  config.py
backend/scripts/: clean.sh  format.sh  lint.sh
backend/tests/: conftest.py
scripts/: lint.sh
(+99 files in other folders)
